--- a/jaeger-client-pinch.cabal
+++ b/jaeger-client-pinch.cabal
@@ -33,6 +33,7 @@ Library
                  , bytestring >= 0.10 && < 0.11
                  , clock >= 0.7 && < 0.8
                  , containers >= 0.5 && < 0.6
+                 , deepseq >= 1.4 && < 1.5
                  , lens >= 4.15 && < 4.16
                  , pinch >= 0.3 && < 0.4
                  , random >= 1.1 && < 1.2
