--- a/jaeger-client-pinch.cabal
+++ b/jaeger-client-pinch.cabal
@@ -100,11 +100,31 @@ Test-Suite jaeger-client-pinch-test
 
 Benchmark jaeger-client-pinch-bench
   Type:           exitcode-stdio-1.0
-  Main-Is:        Main.hs
+  Main-Is:        bench.hs
+  Other-Modules:  Values
   Build-Depends:  base >= 4.9 && < 4.11
                 , criterion >= 1.1 && < 1.3
                 , lens >= 4.15 && < 4.16
                 , pinch >= 0.3 && < 0.4
+                , jaeger-client-pinch
+  Hs-Source-Dirs: bench
+  Ghc-Options:
+    -Wall
+    -Wincomplete-uni-patterns
+    -Wincomplete-record-updates
+    -Wmissing-import-lists
+    -Wredundant-constraints
+    -g
+    -rtsopts
+
+Benchmark jaeger-client-pinch-weigh
+  Type:           exitcode-stdio-1.0
+  Main-Is:        weigh.hs
+  Other-Modules:  Values
+  Build-Depends:  base >= 4.9 && < 4.11
+                , lens >= 4.15 && < 4.16
+                , pinch >= 0.3 && < 0.4
+                , weigh >= 0.0 && < 0.1
                 , jaeger-client-pinch
   Hs-Source-Dirs: bench
   Ghc-Options:
