--- a/jaeger-client-pinch.cabal
+++ b/jaeger-client-pinch.cabal
@@ -75,10 +75,13 @@ Executable jaeger-client-pinch-demo
 Test-Suite jaeger-client-pinch-test
   Type:           exitcode-stdio-1.0
   Main-Is:        Main.hs
+  Other-Modules:  Utils
+                , Jaeger_Types
   Build-Depends:  base >= 4.9 && < 4.11
                 , bytestring >= 0.10 && < 0.11
                 , clock >= 0.7 && < 0.8
                 , containers >= 0.5 && < 0.6
+                , hashable >= 1.2 && < 1.3
                 , lens >= 4.15 && < 4.16
                 , lens-properties >= 4.11 && < 4.12
                 , pinch >= 0.3 && < 0.4
@@ -87,8 +90,13 @@ Test-Suite jaeger-client-pinch-test
                 , tasty >= 0.11 && < 0.12
                 , tasty-hspec >= 1.1 && < 1.2
                 , tasty-quickcheck >= 0.8 && < 0.10
+                , text >= 1.2 && < 1.3
+                , thrift >= 0.10 && < 0.11
+                , unordered-containers >= 0.2 && < 0.3
+                , vector >= 0.12 && < 0.13
                 , jaeger-client-pinch
   Hs-Source-Dirs: test
+                , gen-hs
   Ghc-Options:
     -Wall
     -Wincomplete-uni-patterns
@@ -102,12 +110,22 @@ Benchmark jaeger-client-pinch-bench
   Type:           exitcode-stdio-1.0
   Main-Is:        bench.hs
   Other-Modules:  Values
+                , ThriftValues
+                , Jaeger_Types
   Build-Depends:  base >= 4.9 && < 4.11
+                , bytestring >= 0.10 && < 0.11
                 , criterion >= 1.1 && < 1.3
+                , hashable >= 1.2 && < 1.3
                 , lens >= 4.15 && < 4.16
                 , pinch >= 0.3 && < 0.4
+                , QuickCheck >= 2.9 && < 2.10
+                , text >= 1.2 && < 1.3
+                , thrift >= 0.10 && < 0.11
+                , unordered-containers >= 0.2 && < 0.3
+                , vector >= 0.12 && < 0.13
                 , jaeger-client-pinch
   Hs-Source-Dirs: bench
+                , gen-hs
   Ghc-Options:
     -Wall
     -Wincomplete-uni-patterns
@@ -121,12 +139,23 @@ Benchmark jaeger-client-pinch-weigh
   Type:           exitcode-stdio-1.0
   Main-Is:        weigh.hs
   Other-Modules:  Values
+                , ThriftValues
+                , Jaeger_Types
   Build-Depends:  base >= 4.9 && < 4.11
+                , bytestring >= 0.10 && < 0.11
+                , deepseq >= 1.4 && < 1.5
+                , hashable >= 1.2 && < 1.3
                 , lens >= 4.15 && < 4.16
                 , pinch >= 0.3 && < 0.4
+                , QuickCheck >= 2.9 && < 2.10
+                , text >= 1.2 && < 1.3
+                , thrift >= 0.10 && < 0.11
+                , unordered-containers >= 0.2 && < 0.3
+                , vector >= 0.12 && < 0.13
                 , weigh >= 0.0 && < 0.1
                 , jaeger-client-pinch
   Hs-Source-Dirs: bench
+                , gen-hs
   Ghc-Options:
     -Wall
     -Wincomplete-uni-patterns
