--- a/jaeger-types/jaeger-types.cabal
+++ b/jaeger-types/jaeger-types.cabal
@@ -35,16 +35,20 @@ Library
                  , Jaeger.Types.Process
                  , Jaeger.Types.RPC
                  , Jaeger.Types.Span
+                 , Jaeger.Types.SpanContext
                  , Jaeger.Types.SpanId
                  , Jaeger.Types.SpanRef
                  , Jaeger.Types.Tag
                  , Jaeger.Types.TimeSpec
                  , Jaeger.Types.TraceId
   Build-Depends:   base >= 4.9 && < 4.11
+                 , binary >= 0.8 && < 0.9
                  , bytestring >= 0.10 && < 0.11
                  , clock >= 0.7 && < 0.8
                  , containers >= 0.5 && < 0.6
                  , deepseq >= 1.4 && < 1.5
+                 , formatting >= 6.2 && < 6.3
+                 , http-types >= 0.9 && < 0.10
                  , lens >= 4.15 && < 4.16
                  , pinch >= 0.3 && < 0.4
                  , random >= 1.1 && < 1.2
@@ -74,6 +78,7 @@ Test-Suite jaeger-types-test
                 , clock >= 0.7 && < 0.8
                 , containers >= 0.5 && < 0.6
                 , hashable >= 1.2 && < 1.3
+                , http-types >= 0.9 && < 0.10
                 , lens >= 4.15 && < 4.16
                 , lens-properties >= 4.11 && < 4.12
                 , pinch >= 0.3 && < 0.4
