monad-jaeger: Implement sampled tracing

--- a/monad-logger-jaeger/monad-logger-jaeger.cabal
+++ b/monad-logger-jaeger/monad-logger-jaeger.cabal
@@ -49,6 +49,7 @@ Library
 
 Executable monad-logger-jaeger-example
   Build-Depends: base >= 4.9 && < 4.11
+               , jaeger-sampler >= 0.0 && < 0.1
                , jaeger-utils >= 0.0 && < 0.1
                , lifted-base >= 0.2 && < 0.3
                , monad-jaeger >= 0.0 && < 0.1
