--- a/monad-jaeger/monad-jaeger.cabal
+++ b/monad-jaeger/monad-jaeger.cabal
@@ -29,7 +29,9 @@ Library
                  , Control.Monad.Trans.Jaeger
                  , Control.Monad.Trans.JaegerTrace
   Build-Depends:   base >= 4.9 && < 4.11
+                 , containers >= 0.5 && < 0.6
                  , jaeger-opentracing-tags >= 0.0 && < 0.1
+                 , jaeger-sampler >= 0.0 && < 0.1
                  , jaeger-types >= 0.0 && < 0.1
                  , jaeger-utils >= 0.0 && < 0.1
                  , lens >= 4.15 && < 4.16
@@ -54,6 +56,7 @@ Library
 
 Executable monad-jaeger-example
   Build-Depends:  base >= 4.9 && < 4.11
+                , jaeger-sampler >= 0.0 && < 0.1
                 , jaeger-types >= 0.0 && < 0.1
                 , jaeger-utils >= 0.0 && < 0.1
                 , lifted-base >= 0.2 && < 0.3
