--- a/monad-jaeger/monad-jaeger.cabal
+++ b/monad-jaeger/monad-jaeger.cabal
@@ -28,7 +28,9 @@ Library
                  , Control.Monad.JaegerTrace.Class
                  , Control.Monad.Trans.Jaeger
                  , Control.Monad.Trans.JaegerTrace
+  Other-Modules:   Network.Socket.MTU
   Build-Depends:   base >= 4.9 && < 4.11
+                 , bytestring >= 0.10 && < 0.11
                  , containers >= 0.5 && < 0.6
                  , jaeger-opentracing-tags >= 0.0 && < 0.1
                  , jaeger-sampler >= 0.0 && < 0.1
@@ -42,6 +44,7 @@ Library
                  , random >= 1.1 && < 1.2
                  , resourcet >= 1.1 && < 1.2
                  , safe-exceptions >= 0.1 && < 0.2
+                 , stm >= 2.4 && < 2.5
                  , text >= 1.2 && < 1.3
                  , transformers >= 0.5 && < 0.6
                  , transformers-base >= 0.4 && < 0.5
