--- a/jaeger-utils/jaeger-utils.cabal
+++ b/jaeger-utils/jaeger-utils.cabal
@@ -33,6 +33,7 @@ Library
                  , network >= 2.6 && < 2.7
                  , safe-exceptions >= 0.1 && < 0.2
                  , text >= 1.2 && < 1.3
+                 , transformers-base >= 0.4 && < 0.5
                  , unix >= 2.7 && < 2.8
   Hs-Source-Dirs:  src
   Ghc-Options:
