--- a/monad-jaeger/monad-jaeger.cabal
+++ b/monad-jaeger/monad-jaeger.cabal
@@ -70,12 +70,15 @@ Library
 
 Executable monad-jaeger-example
   Build-Depends:  base >= 4.9 && < 4.11
+                , ekg-core >= 0.1 && < 0.2
                 , jaeger-sampler >= 0.0 && < 0.1
                 , jaeger-types >= 0.0 && < 0.1
                 , jaeger-utils >= 0.0 && < 0.1
                 , lifted-base >= 0.2 && < 0.3
                 , safe-exceptions >= 0.1 && < 0.2
+                , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
+                , unordered-containers >= 0.2 && < 0.3
                 , monad-jaeger
   Main-Is:        Main.hs
   Hs-Source-Dirs: examples
