--- a/jaeger-utils/jaeger-utils.cabal
+++ b/jaeger-utils/jaeger-utils.cabal
@@ -27,8 +27,10 @@ Library
   Exposed-Modules: Jaeger.Clock
                  , Jaeger.Process
                  , Network.Jaeger
+  Other-Modules:   Network.Ifaddrs
   Build-Depends:   base >= 4.9 && < 4.11
                  , clock >= 0.7 && < 0.8
+                 , containers >= 0.5 && < 0.6
                  , jaeger-types >= 0.0 && < 0.1
                  , network >= 2.6 && < 2.7
                  , safe-exceptions >= 0.1 && < 0.2
