Extract `monad-jaeger-metrics-ekg`
This splits out EKG-based metrics gathering from the main `monad-jaeger`
package, which will allow to have e.g. a Prometheus-based metrics system
as well.

This implies `servant-jaeger` needed to be fixed up to no longer rely on
a single metrics reporting system.

Also, the examples in `monad-jaeger` no longer use EKG metering, but the
`InMemoryMetricsT` mechanism instead.

--- a/servant-jaeger/servant-jaeger.cabal
+++ b/servant-jaeger/servant-jaeger.cabal
@@ -59,6 +59,7 @@ Executable servant-jaeger-example
                 , jaeger-utils >= 0.0 && < 0.1
                 , lifted-base >= 0.2 && < 0.3
                 , monad-jaeger >= 0.0 && < 0.1
+                , monad-jaeger-metrics-ekg >= 0.0 && < 0.1
                 , monad-logger >= 0.3 && < 0.4
                 , monad-logger-jaeger >= 0.0 && < 0.1
                 , servant >= 0.11 && < 0.12
