--- a/monad-jaeger/monad-jaeger.cabal
+++ b/monad-jaeger/monad-jaeger.cabal
@@ -34,7 +34,6 @@ Library
   Build-Depends:   base >= 4.9 && < 4.11
                  , bytestring >= 0.10 && < 0.11
                  , containers >= 0.5 && < 0.6
-                 , ekg-core >= 0.1 && < 0.2
                  , exceptions >= 0.8 && < 0.9
                  , jaeger-opentracing-tags >= 0.0 && < 0.1
                  , jaeger-sampler >= 0.0 && < 0.1
@@ -70,7 +69,7 @@ Library
 
 Executable monad-jaeger-example
   Build-Depends:  base >= 4.9 && < 4.11
-                , ekg-core >= 0.1 && < 0.2
+                , containers >= 0.5 && < 0.6
                 , jaeger-sampler >= 0.0 && < 0.1
                 , jaeger-types >= 0.0 && < 0.1
                 , jaeger-utils >= 0.0 && < 0.1
@@ -78,7 +77,6 @@ Executable monad-jaeger-example
                 , safe-exceptions >= 0.1 && < 0.2
                 , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
-                , unordered-containers >= 0.2 && < 0.3
                 , monad-jaeger
   Main-Is:        Main.hs
   Hs-Source-Dirs: examples
