--- a/stack.yaml
+++ b/stack.yaml
@@ -19,5 +19,7 @@ extra-deps:
 - dump-core-0.1.3.1
 - monadLib-3.7.3
 - prometheus-effect-1.0.0
+- servant-0.12
+- servant-server-0.12
 
 allow-newer: true
