--- a/servant-jaeger/servant-jaeger.cabal
+++ b/servant-jaeger/servant-jaeger.cabal
@@ -24,19 +24,30 @@ Source-Repository head
   Subdir:   servant-jaeger
 
 Library
-  Exposed-Modules: Servant.Jaeger.Server
+  Exposed-Modules: Servant.Jaeger.Client
+                 , Servant.Jaeger.Server
   Build-Depends:   base >= 4.9 && < 4.11
+                 , binary >= 0.8 && < 0.9
                  , bytestring >= 0.10 && < 0.11
                  , exceptions >= 0.8 && < 0.9
+                 , http-client >= 0.5 && < 0.6
                  , http-types >= 0.9 && < 0.10
+                 , jaeger-opentracing-tags >= 0.0 && < 0.1
                  , jaeger-sampler >= 0.0 && < 0.1
                  , jaeger-types >= 0.0 && < 0.1
+                 , monad-control >= 1.0 && < 1.1
                  , monad-jaeger >= 0.0 && < 0.1
                  , mtl >= 2.2 && < 2.3
                  , network >= 2.6 && < 2.7
+                 , resourcet >= 1.1 && < 1.2
                  , safe-exceptions >= 0.1 && < 0.2
+                 , semigroupoids >= 5.2 && < 5.3
                  , servant >= 0.12 && < 0.13
+                 , servant-client >= 0.12 && < 0.13
+                 , servant-client-core >= 0.12 && < 0.13
                  , servant-server >= 0.12 && < 0.13
+                 , text >= 1.2 && < 1.3
+                 , transformers >= 0.5 && < 0.6
                  , transformers-base >= 0.4 && < 0.5
                  , wai >= 3.2 && < 3.3
                  , wai-jaeger >= 0.0 && < 0.1
@@ -54,15 +65,20 @@ Executable servant-jaeger-example
   Build-Depends:  base >= 4.9 && < 4.11
                 , ekg >= 0.4 && < 0.5
                 , exceptions >= 0.8 && < 0.9
+                , http-client >= 0.5 && < 0.6
                 , jaeger-sampler >= 0.0 && < 0.1
                 , jaeger-types >= 0.0 && < 0.1
                 , jaeger-utils >= 0.0 && < 0.1
+                , lens >= 4.15 && < 4.16
                 , lifted-base >= 0.2 && < 0.3
                 , monad-jaeger >= 0.0 && < 0.1
                 , monad-jaeger-metrics-ekg >= 0.0 && < 0.1
                 , monad-logger >= 0.3 && < 0.4
                 , monad-logger-jaeger >= 0.0 && < 0.1
+                , mtl >= 2.2 && < 2.3
                 , servant >= 0.12 && < 0.13
+                , stm >= 2.4 && < 2.5
+                , transformers >= 0.5 && < 0.6
                 , transformers-base >= 0.4 && < 0.5
                 , warp >= 3.2 && < 3.3
                 , servant-jaeger
