--- a/stack.yaml
+++ b/stack.yaml
@@ -21,5 +21,7 @@ extra-deps:
 - prometheus-effect-1.0.0
 - servant-0.12
 - servant-server-0.12
+- servant-client-core-0.12
+- servant-client-0.12
 
 allow-newer: true
